force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <label>Employment</label>
    <nameField>
        <label>Employment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>