force-app/main/default/objects/Employment__c/fields/Employer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone_Number__c</fullName>
    <label>Employer Phone Number</label>
    <type>Phone</type>
</CustomField>