force-app/main/default/objects/Employment__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Home Maker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Unemployed with income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>